# snb_plugin_manager

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: args.rs  commands.rs  discovery.rs  lib.rs  process.rs  reply.rs
tests/unit/: args_tests.rs  discovery_tests.rs  lib_tests.rs  process_tests.rs  reply_tests.rs
